# fungible-token

./: CHANGELOG.md  Cargo.toml
io/: Cargo.toml
io/src/: lib.rs
src/: contract.rs  lib.rs  tests.rs
