[package]
name = "fungible-token"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git" }
ft-io = { path = "io" }
hashbrown = "0.13.1"
gmeta = { git = "https://github.com/gear-tech/gear", features = ["codegen"] }

[dev-dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
ft-io = { path = "io" }
